fix header's z-index

--- a/css/mainpage2.css
+++ b/css/mainpage2.css
@@ -193,6 +193,7 @@ body{
     display: flex;
     justify-content: flex-end;
     position: absolute;
+    z-index: 2;
 }
 
 #headerContainer{
